# searchenginepp

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  utf8-latin1-utf8-schifo-test.py
.github/workflows/: test.yml
src/: builder.cpp  engine.cpp  index_worker.hpp  meta.hpp  prova_main.cpp
src/codes/: codes.hpp  unary.hpp  variable_blocks.hpp
src/codes/diskmap/: builder.hpp  diskmap.hpp  reader.hpp
src/index/: Index.cpp  Index.hpp  Index.template.hpp  query_scorer.cpp  query_scorer.hpp  types.hpp
src/indexBuilder/: IndexBuilder.cpp  IndexBuilder.hpp
src/normalizer/: PunctuationRemover.cpp  PunctuationRemover.hpp  WordNormalizer.cpp  WordNormalizer.hpp  stop_words.cpp  stop_words.hpp  utf8_utils.cpp  utf8_utils.hpp
src/util/: engine_options.cpp  engine_options.hpp  memory.cpp  memory.hpp  thread_pool.cpp  thread_pool.hpp
tests/: CMakeLists.txt  test_codes_unary.cpp  test_codes_variable_blocks.cpp  test_disk_map.cpp  test_index_builder.cpp  test_normalizer.cpp  test_thread_pool.cpp
